2008-08-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    slight cleanup
	* generic/tclCompile.h:
	* generic/tclExecute.c: 

2008-08-09  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclExecute.c:	fix warnings.

	* generic/tclOOMethod.c (PushMethodCallFrame):	fix uninitialized efi
							name field.

	* tests/lrange.test (lrange-1.17):	add test cleanup; whitespace.

2008-08-08  Don Porter  <dgp@users.sourceforge.net>S

	* changes:	Updates for 8.6a2 release.

2008-08-08  Kevin Kenny   <kennykb@acm.org>

	* library/tzdata/CET:
	* library/tzdata/MET:
	* library/tzdata/Africa/Casablanca:
	* library/tzdata/America/Eirunepe:
	* library/tzdata/America/Rio_Branco:
	* library/tzdata/America/Santarem:
	* library/tzdata/America/Argentina/San_Luis:
	* library/tzdata/Asia/Karachi:
	* library/tzdata/Europe/Belgrade:
	* library/tzdata/Europe/Berlin:
	* library/tzdata/Europe/Budapest:
	* library/tzdata/Europe/Sofia:
	* library/tzdata/Indian/Mauritius:  Olson's tzdata2008e.
	
2008-08-07  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:   Fix tailcalls falling out of tebc into 
	* generic/tclExecute.c: Tcl_EvalEx. [Bug 2017946]
	* generic/tclInt.h:
	
2008-08-06  Don Porter  <dgp@users.sourceforge.net>S

	* generic/tclOO.c:	Revised TclOO's check for an interp
	being deleted during handling of object command deletion.  The
	old code was relying on documented features of command delete
	traces that do not in fact work.  [Bug 2039178]

	* tests/oo.test (oo-26.*):	Added tests that demonstrate
	failure of TclOO to check for various kinds of invalid bytecode
	during method dispatch.  [Bug 2037727]

2008-08-06  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (TclLookupSimpleVar): fix bug that the core
	could not trigger before TclOO: the number of locals was being
	read from the Proc, which can under some circumstance be out of
	sync with the localCache's. Found by dgp while investigating 
	[Bug 2037727].
	